# pygbase

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
libs/pygbase-particles/: Cargo.toml  pygbase_particles.pyi  pyproject.toml
libs/pygbase-particles/src/: lib.rs  particle.rs  particle_manager.rs
libs/pygbase-particles/src/particle_spawners/: mod.rs  point_spawner.rs
libs/pygbase-particles/src/utils/: mod.rs  timer.rs  vec2.rs
pygbase/: __init__.py  app.py  camera.py  common.py  debug.py  events.py  game_state.py  inputs.py  loader.py  resources.py  screen.py  timer.py  transition_states.py  tweens.py  utils.py
pygbase/ecs/: component.py  ecs_manager.py  entity.py  query.py  test_ecs.py
pygbase/graphics/: __init__.py  animation.py  image.py  sprite_sheet.py
pygbase/inputs/: __init__.py  input.py  input_types.py
pygbase/lighting/: __init__.py  light.py  lighting_manager.py  shadow.py
pygbase/particles/: __init__.py  particle.py  particle_affectors.py  particle_manager.py  particle_settings.py  particle_spawners.py
pygbase/ui/: __init__.py  dialogue.py  element.py  enums.py  rawtext.py  screen.py  text.py  ui_element.py  ui_elements.py  ui_manager.py  values.py
test/: dialogue_testing.py  game.py  main.py  menu.py  particle_playground.py  tweens.py
test/images/: config.json
