[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pygbase-engine"
version = "0.0.1"
description = "A simple engine for pygame"
readme = "README.md"
authors = [{ name = "Yu266426", email = "yu266426@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
keywords = ["pygame", "pygame-ce", "game"]
dependencies = [
    "pygame-ce >= 2.3.0",
]
requires-python = ">=3.11"

[project.urls]
Homepage = "https://github.com/Yu266426/pygbase"