[package]
name = "pygbase-particles"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pygbase_particles"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.22.4"
rand = {version = "0.8.5", features = ["small_rng"]}
